package logger;

public interface ILoggerFactory {
    public ILogger createLogger();  
}
