@startuml logger
interface ILogger {
    public log(msg)
}
class DebugLogger {
    public log(msg)
}
class InfoLogger {
    public log(msg)
}
class ErrorLogger {
    public log(msg)
}
interface ILoggerFactory {
    public createLogger(): ILogger
}
class DebugLoggerFactory {
    public createLogger(): ILogger
}
class InfoLoggerFactory {
    public createLogger(): ILogger
}
class ErrorLoggerFactory {
    public createLogger(): ILogger
}
class Client

ILogger <|.. DebugLogger
ILogger <|.. InfoLogger
ILogger <|.. ErrorLogger

ILoggerFactory <|.. DebugLoggerFactory
ILoggerFactory <|.. InfoLoggerFactory
ILoggerFactory <|.. ErrorLoggerFactory

DebugLogger "calls" <-- DebugLoggerFactory
InfoLogger "calls" <-- InfoLoggerFactory
ErrorLogger "calls" <-- ErrorLoggerFactory

DebugLoggerFactory "uses" <-- Client
InfoLoggerFactory "uses" <-- Client
ErrorLoggerFactory "uses" <-- Client
@enduml